# hekate-gateway

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build-mpy-rp2.sh  build-mpy-unix.sh  build-mpy.sh  start-putty.bat  start-software-dev.bat
custom-gateway/: CMakeLists.txt  sys.c  sys_linux.c
custom-gateway/linux/: sys.c
docs/: .gitignore  .readthedocs.yaml  README.md  requirements.txt
docs/drawio/: .$base_architecture.drawio.bkp  HW_Overview.drawio  LoRa_SW_Overview.drawio  LoRa_SW_Overview.drawio.html  base_architecture.drawio  sim_state_machine.drawio  task_overview.drawio  udp_overview.drawio
docs/papyrus/SYSMOD/: .project  SYSMOD.profile.notation  SYSMOD.profile.uml
docs/papyrus/hekate/: .project  hekate.notation  hekate.uml  objectives.css
docs/scripts/: create_objectives_table.py  create_risks_table.py
docs/source/: architecture.md  conf.py  index.rst  tasks.md
electronics/hekate_pcb/: Issues.txt  SIM.kicad_sch  hekate_pcb.kicad_pcb  hekate_pcb.kicad_prl  hekate_pcb.kicad_pro  hekate_pcb.kicad_sch  lora.kicad_sch  mcu.kicad_sch  pico_pi.kicad_sch
hekatelib/: CMakeLists.txt
hekatelib/common/: sys_linux.c
hekatelib/include/: hekate.h  hekate_handles.h
hekatelib/linux/: gps.c  rmtsh.c  sys.c  sys_linux.c  sys_log.c  web_linux.c
hekatelib/mpy/: cmdfifo.c  gps.c  rmtsh.c  sys.c  sys_linux.c  sys_linux.h  sys_log.c
hekatelib/src/: commands.c  fs.h  gps.c  hekate.c  ral_master.c  rmtsh.c  station_main.c  sys.c  sys_linux.c  sys_linux.h  sys_log.c
mpy-modules/: micropython.cmake
mpy-modules/hekatepy/: hekatepy.c  micropython.cmake  micropython.mk
mpy-scripts/: example.py
software/: CMakeLists.txt  Dockerfile  README.md  build-mpy-unix.sh  run-mpy-unix.sh
software/.devcontainer/: devcontainer.json
software/application/: CMakeLists.txt  Password.cmake  gateway_task.c  gateway_task.h  main.c  packet_forwarder_task.c  task_concentrator.c  task_concentrator.h
software/application/SIM7020/: CMakeLists.txt  main.c
software/application/config/: lwipopts.h
software/application/gateway_packets_example/: CMakeLists.txt  main.c
software/application/hekate_gateway/: CMakeLists.txt  gateway_task.c  main.c  packet_forwarder_task.c  packet_forwarder_task.h  sim7020_task.c  sim7020_task.h  time_ntp.c  time_ntp.h
software/application/hekate_gateway/config/: FreeRTOSConfig.h
software/application/packet_forwarder_py/: mybase64.py  send_up_rxpacket.py  udp_server copy 2.py
software/applications/SIM7020/: main.c
software/applications/SIM7020_hal/: CMakeLists.txt  FreeRTOSConfig.h  main.c
software/applications/packet_forwarder_py/: mybase64.py  udp_server copy.py
software/applications/sim_state_machine/: CMakeLists.txt  main.c
software/concentrator/: .gitignore  CMakeLists.txt  README.md
software/concentrator/example/: main.c
software/concentrator/include/: concentrator.h  concentrator_types.h  semtech_packet.h
software/concentrator/mpy/: build.sh  micropython.cmake
software/concentrator/mpy/concentratorpy/: concentratorpy.c  micropython.cmake  micropython.mk
software/concentrator/patches/: 0001-remove-the-array-static-stuff-from-header-file.patch
software/concentrator/src/: concentrator.c  concentrator_spi.c  concentrator_spi.h  lora_config.c  lora_config.h  semtech_packet.c  spi.c  spi.h  wait.c  wait.h
software/concentrator/src/custom_sx1302/: config.h  const_agc_fw_sx1250.var  const_agc_fw_sx1257.var  const_arb_fw.var  const_cal_fw.var  custom_usb.c  loragw_aux.c  loragw_debug.c  loragw_gps.c  loragw_hal.c  loragw_i2c.c  loragw_spi.c  loragw_sx1302.c  loragw_usb.c  spi_custom_init.h  sx1250_spi.c  sx125x_spi.c  sx1261_spi.c  termios.h
software/hekatelib/: CMakeLists.txt
software/hekatelib/include/: hekate.h  hekate_handles.h
software/hekatelib/src/: hekate.c  sys.c  sys_linux.c  sys_linux.h  sys_log.c
software/micropython/: README.md  build-mpy-rp2.sh  build-mpy-unix.sh  run-mpy-unix.sh
software/micropython/mpy-scripts/: example.py  rp2_example.py
software/micropython/patches/: disable_warning_as_error.patch
software/mpy-modules/: micropython.cmake
software/mpy-modules/hekatepy/: hekatepy.c  micropython.mk
software/packet_forwarder/: send_stat.py  udp_server.py
software/pico_dev/: CMakeLists.txt  hello_world.c
software/src/: CMakeLists.txt  free_rtos_memory.c  free_rtos_memory.h  internet_task_if.h  lora_task.c  lora_task.h  main.c  packet_forwarder_task.c  packet_forwarder_task.h  sim7020_internet_task.c  time_ntp.c  time_ntp.h  wifi_internet_task.c
software/src/config/: application_config.h  lwipopts.h
software/src/sim7020/: sim7020.c  sim7020.h  sim7020_hal.c  sim7020_hal.h  sim7020_internet_task.c  sim7020_state_machine.c  sim7020_state_machine.h
software/ttn-config/: tc.key
software/utils/: CMakeLists.txt  hekate_utils.c  hekate_utils.h
ttn-config/: cups-bak.key  cups.key  station.conf  tc-bak.key
